# routes/api.js
@@ -18,6 +18,9 @@ module.exports = function (app) {
     app.route("/apis/team_list").get(verifyTokenMiddleware,teamModule.teamList);
     app.route("/apis/team_detail/:team_id").get(verifyTokenMiddleware,teamModule.teamDetail);
     app.route("/apis/create_match").post(verifyTokenMiddleware,teamModule.createMatch);
+    app.route("/apis/match_list").get(verifyTokenMiddleware,teamModule.MatchList);
+    app.route("/apis/verify_scorer").post(verifyTokenMiddleware,teamModule.verifyScorer);
+    app.route("/apis/toss_result").post(verifyTokenMiddleware,teamModule.tossResult);
 
 
 
